Code review - Darius

--- a/Pages/Tasks.razor
+++ b/Pages/Tasks.razor
@@ -15,7 +15,7 @@
             <tr>
                 <th scope="row">1</th>
                 <td>Task1</td>
-                <td>description description description description description description description description description description description description description description description description description description description </td>
+                <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ultricies, ante vitae faucibus pellentesque, nisi risus pretium neque, eget molestie mauris tortor sed leo.</td>
                 <td>
                     <center>
                         <input type="date" value="12.12.12" />
