Added Projects page with initial implementation

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -181,5 +181,36 @@ app {
         color: white;
     }
 
+.vertical-menu {
+    width: 200px;
+}
 
+    .vertical-menu a {
+        background-color: #eee;
+        color: black;
+        display: block;
+        padding: 12px;
+        text-decoration: none;
+    }
+
+        .vertical-menu a:hover {
+            background-color: #ccc;
+        }
+
+        .vertical-menu a.active {
+            background-color: #483D8B;
+            color: white;
+        }
+
+.issue-link-key {
+    display: block;
+    font-size: 20px;
+}
+
+.issue-link-summary {
+    display: block;
+    height: 47px;
+    overflow-y: hidden;
+    text-overflow: ellipsis;
+}
 
