--- a/Pages/Counter.razor
+++ b/Pages/Counter.razor
@@ -1,5 +1,5 @@
 ﻿@page "/counter"
-
+@using Microsoft.AspNetCore.Mvc;
 <h1>Counter</h1>
 <h2>Ionut are nasu prea mare</h2>
 <h2>Darius</h2>
@@ -7,14 +7,21 @@
 
 <h2>Bobita</h2>
 <p>Current count: @currentCount</p>
+<AuthorizeView Roles="Student">
+    <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+</AuthorizeView>
 
-<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
 
 @code {
-    int currentCount = 0;
 
-    void IncrementCount()
+    int currentCount = 0;
+    [Authorize(Roles="Student")]
+    public void IncrementCount()
     {
+
         currentCount++;
+        
+
+
     }
 }
