Added specific tasks for projects, first implementation

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -214,3 +214,12 @@ app {
     text-overflow: ellipsis;
 }
 
+.project-first-column {
+    width: 25%;
+    float: left;
+}
+
+.project-second-column {
+    width: 60%;
+    float: right;
+}
