MyProfile page 80% gata

--- a/Pages/MyProfile.razor
+++ b/Pages/MyProfile.razor
@@ -1,42 +1,86 @@
 ﻿@page "/myprofile"
-<h2 style="text-align:center">User Profile Card</h2>
-<div class="modal-body row">
-    <div class="project-first-column">
-        <div class="card" id="profile">
-            <center>
-                <img src="/css/bootstrap/img.jpg" alt="John" style="width:100%">
-                <h1>John Wick</h1>
-                <p class="title">Programmer</p>
-                <p>Siemens</p>
-                <a href="https://www.facebook.com/ionuut.alban">
-                    <i class="fa fa-facebook-square" aria-hidden="true"></i>
-                </a>
-                <p><button>Follow</button></p>
-            </center>
+<head>
+    <link rel="stylesheet" href="/css/MyProfile.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+<body>
+    <h2  style="text-align:center">User Profile Card</h2>
+    <div class="modal-body row">
+        <div class="project-first-column">
+            <div class="card" id="profile">
+                <img src="/css/bootstrap/img.jpg" alt="John" style="width:100%;border-radius:12px 12px 0 0">
+                <p class="title">John Wick</p>
+
+                <div class="text-card">
+                    <p><i class="fa fa-home"></i>Brasov</p>
+                    <p><i class="fa fa-university"></i>Matematica si Informatica</p>
+                    <p><i class="fa fa-phone-square"></i>0760030989</p>
+                    <hr>
+                    <p><b><i class="fa fa-asterisk info"></i>Skills</b></p>
+                    <div class="skill-bar">
+                        <div class="progress-bar" style="width:80%">Language C# 80%</div>
+                    </div>
+                </div>
+
+                <center>
+                    <p>
+                        <a href="https://www.facebook.com/ionuut.alban">
+                            <i class="fa fa-facebook-square"></i>
+                        </a>
+                        <a href="https://github.com/albanionut">
+                            <i class="fa fa-github" aria-hidden="true"></i>
+                        </a>
+                    </p>
+                </center>
+
+            </div>
+        </div>
+
+
+
+
+        <div class="project-second-column">
+
+            <div class="card" id="profile" style="margin-bottom:50px; margin-top:30px;">
+                
+               <div class="row">
+                   <p id="titlecard"> Projects </p>
+                <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for projects..">
+               
+               </div>
+                <hr style="margin-top:0px;margin-bottom:0px;">
+
+               
+                <ul id="myProjectList">
+                    <li><a href="#">Project 1</a></li>
+                    <li><a href="#">Project 2</a></li>
+                    <li><a href="#">Project 3</a></li>
+                </ul>
+
+            </div>
+
+           <div class="card" id="profile" style="margin-bottom:50px; margin-top:30px;">
+                
+               <div class="row">
+                   <p id="titlecard"> Tasks </p>
+                <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for projects..">
+               
+               </div>
+                <hr style="margin-top:0px;margin-bottom:0px;">
+
+               
+                <ul id="myProjectList">
+                    <li><a href="#">Task 1</a></li>
+                    <li><a href="#">Task 2</a></li>
+                    <li><a href="#">Task 3</a></li>
+                </ul>
+
+            </div>
+
         </div>
     </div>
-    <div class="project-second-column">
-        <div class="card" id="profile" style="margin-bottom:50px; margin-top:30px" >
-            <h2>Projects</h2>
-            <ul>
-                <li>Project1</li>
-                <li>Project2</li>
-                <li>Project3</li>
-            </ul>
-
-        </div>
-
-        <div class="card" id="profile">
-            <h2>Tasks</h2>
-            <ul>
-                <li>Task1</li>
-                <li>Task2</li>
-                <li>Task3</li>
-            </ul>
-
-        </div>
-    </div>
-</div>
+</body>
 @code {
+
 
 }
