--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -27,6 +27,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Tasks
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="myprofile">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> MyProfile
+            </NavLink>
+        </li>
 
     </ul>
 </div>
