Update culoare myprofile

--- a/Pages/MyProfile.razor
+++ b/Pages/MyProfile.razor
@@ -43,7 +43,7 @@
 
             <div class="card" id="profile" style="margin-bottom:50px; margin-top:30px;">
                 
-               <div class="row">
+               <div class="row" id="rowtextbackground">
                    <p id="titlecard"> Projects </p>
                 <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for projects..">
                
@@ -61,7 +61,7 @@
 
            <div class="card" id="profile" style="margin-bottom:50px; margin-top:30px;">
                 
-               <div class="row">
+               <div class="row" id="rowtextbackground">
                    <p id="titlecard"> Tasks </p>
                 <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for projects..">
                
