--- a/wwwroot/css/MyProfile.css
+++ b/wwwroot/css/MyProfile.css
@@ -73,7 +73,7 @@ a {
     background-color: #4b4fe2;
 }
 
-#myInput {
+.myInput {
     background-image: url(searchicon.png);
     background-position: center right;
     background-repeat: no-repeat;
@@ -86,12 +86,14 @@ a {
     margin-top: 13px;
     margin-left: 35px;
     margin-bottom:5px;
+    margin-right:13px;
     height: 40px;
     width: 300px;
     padding-left: 10px;
+    padding-right:28px;
 }
 
-#titlecard {
+.titlecard {
     width: 45%;
     float: left;
     margin-top: 10px;
@@ -108,11 +110,10 @@ a {
 .right {
     width: 75%;
 }
-#rowtextbackground {
+.panelbackground {
     background-image: linear-gradient(-50deg,#3a0647,#0b2364);
-    border-radius: 12px 12px 0 0;
     color: antiquewhite;
-    margin: unset;
+    border-radius: 12px 12px 0 0;
 }
 .row:after {
     content: "";
@@ -142,3 +143,9 @@ a {
             padding-left: 4px;
             margin-right: 15px;
         }
+
+.imgprofile {
+    border-radius: 12px;
+    padding:10px;
+    
+}
