update my profile

--- a/Pages/MyProfile.razor
+++ b/Pages/MyProfile.razor
@@ -6,7 +6,7 @@
 <body>
     <div class="modal-body row">
         <div class="col-md-4">
-            <div class="card" id="profile">
+            <div class="card profile">
                 <img src="/css/bootstrap/img.jpg" alt="John" class="card-img-top imgprofile">
                 <p class="title">John Wick</p>
 
