--- a/wwwroot/css/MyProfile.css
+++ b/wwwroot/css/MyProfile.css
@@ -8,7 +8,7 @@
 }
 
 
-#profile {
+.profile {
     border-radius: 12px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
@@ -17,7 +17,7 @@
     color: black;
     font-size: 40px;
     text-align: center;
-    padding-top: 30px;
+    padding-top: 10px;
     margin-bottom: 0px;
     font-family: 'Segoe';
     margin-top: -10px;
@@ -145,7 +145,7 @@ a {
         }
 
 .imgprofile {
-    border-radius: 12px;
-    padding:10px;
+    border-radius:12px;
+    padding:15px;
     
 }
