--- a/wwwroot/css/MyProfile.css
+++ b/wwwroot/css/MyProfile.css
@@ -100,7 +100,7 @@ a {
     margin-left: 35px;
     font-size: 35px;
     margin-bottom: 5px;
-    font-family: 'Segoe';
+    font-family: 'Arial';
 }
 
 .left {
@@ -124,8 +124,9 @@ a {
 
 #myProjectList {
     /*list-style-type: none;    // scoti punctuletele*/
-    padding-top: 10px;
+    padding-top: 8px;
     padding-left: 30px;
+    margin-bottom: 0px;
 }
 
     #myProjectList li a {
@@ -133,6 +134,7 @@ a {
         text-decoration: none; /*Scoate linia de Hyperlink*/
         color: black; /*Text negru*/
         font-size: 18px;
+        
     }
 
         #myProjectList li a:hover:not(.header) {
