--- a/wwwroot/css/MyProfile.css
+++ b/wwwroot/css/MyProfile.css
@@ -122,22 +122,30 @@ a {
     
 }
 
-#myProjectList {
-    /*list-style-type: none;    // scoti punctuletele*/
-    padding-top: 8px;
+.myProjectList {
+    list-style-type: none;    /* scoti punctuletele*/
+    padding-top: 4px;
     padding-left: 30px;
-    margin-bottom: 0px;
+    
 }
+    .myProjectList li a:before {
+        content: "•";
+        color:blue;
+        font-size:40px;
+        padding-right:8px;
 
-    #myProjectList li a {
+    }
+
+
+    .myProjectList li a {
         margin-top: -1px; /* Previne suprapunerea marginilor */
         text-decoration: none; /*Scoate linia de Hyperlink*/
         color: black; /*Text negru*/
-        font-size: 18px;
+        font-size: 20px;
         
     }
 
-        #myProjectList li a:hover:not(.header) {
+        .myProjectList li a:hover:not(.header) {
             border: 1px solid #ddd; /*Border pentru toate elementele listei*/
             background-color: #f6f6f6; /* Gri */
             border-radius: 10px;
@@ -150,4 +158,8 @@ a {
     border-radius:12px;
     padding:15px;
     
+}
+.spanprofile{
+    margin-top:18px;
+    margin-right:10px;
 }
