Updated Code to work with Preview 9

--- a/Shared/LoginDisplay.razor
+++ b/Shared/LoginDisplay.razor
@@ -1,4 +1,4 @@
-﻿<AuthorizeView>
+﻿<Microsoft.AspNetCore.Components.Authorization.AuthorizeView>
     <Authorized>
         <a href="Identity/Account/Manage">Hello, @context.User.Identity.Name!</a>
         <form method="post" action="Identity/Account/LogOut">
@@ -9,4 +9,4 @@
         <a href="Identity/Account/Register">Register</a>
         <a href="Identity/Account/Login">Log in</a>
     </NotAuthorized>
-</AuthorizeView>
+</Microsoft.AspNetCore.Components.Authorization.AuthorizeView>
